Fix chart heading spacing

--- a/inner_air/profile/dev/scss/profile.scss
+++ b/inner_air/profile/dev/scss/profile.scss
@@ -30,13 +30,17 @@
     }
 
 */
+    .chart-wrapper{
+        margin: 1rem auto;
 
-    .chart {
-        @include tl.drop-shade;
-        margin: 1rem;
-        height: 30em;
-        background-color: tl.$pastel-blue;
-        border-radius: 10px;
-        margin: auto;
+        .chart {
+            @include tl.drop-shade;
+            margin: 1rem;
+            height: 30em;
+            background-color: tl.$pastel-blue;
+            border-radius: 10px;
+            margin: 0.5rem auto;
+        }
     }
+
 }
